Refactor project structure and update README

--- a/notebooks/mnist_comparison.ipynb
+++ b/notebooks/mnist_comparison.ipynb
@@ -5,8 +5,8 @@
    "id": "2f269f8b",
    "metadata": {},
    "source": [
-    "# MNIST CNN Training with PyTorch\n",
-    "In this beginner-friendly notebook, we will explore how to train a Convolutional Neural Network (CNN) on the MNIST dataset using PyTorch. We'll start with the basics of loading and visualizing the dataset, then move on to defining and training our CNN. Along the way, we'll visualize the data and the training process to gain a better understanding of what's happening under the hood."
+    "# Exploring Different Neural Network Architectures with MNIST\n",
+    "In this comprehensive notebook, we embark on a journey to explore and compare different neural network architectures using the classic MNIST dataset, a collection of handwritten digits. We start by examining a Convolutional Neural Network (CNN), known for its effectiveness in image recognition tasks. As we progress, we delve into the realm of transfer learning, adapting a pre-trained ResNet model to our dataset. This exploration provides insights into the strengths and specific applications of each architecture, from standard deep neural networks (DNNs) to advanced models trained on massive datasets. Our goal is to understand how each model learns to recognize handwritten digits, and to compare their performance in terms of accuracy, loss, and other key metrics. Whether you're a beginner or have some experience in deep learning, this notebook is designed to offer a practical, hands-on understanding of different neural network architectures."
    ]
   },
   {
